# Multivariate-Time-Series

./: .gitignore  CMakeLists.txt  LB_Keogh.cpp  LB_MC1.cpp  LB_MC2.cpp  LB_MC3E.cpp  LB_MC_NAIVE1.cpp  LB_MC_NAIVE2.cpp  LB_MV.cpp  LB_PC.cpp  LB_Petitjean.cpp  LB_TI.cpp  TLB.cpp  build.ps1  data.txt  def.h  dtw.cpp  funcs.h  lb_early.h  lower_upper.cpp  main.cpp  mu_sigma.cpp  nn1_lb.cpp  nn1_lb.h  nn1_results.txt  only_mu.cpp  output.txt  tlb_main.cpp  tlb_ratio.cpp  tlb_ratio.h
0209/: CMakeLists.txt  LB_MC3.cpp  LB_MC3E.cpp  LB_MC3_PLUS.cpp  LB_MV.cpp  TLB.cpp  cell.h  data_size.txt  def.h  funcs.h  main.cpp  mu_sigma.cpp  output.txt  read_data.cpp
0215/: CMakeLists.txt  LB_MC3E.cpp  LB_MC3_PLUS.cpp  LB_MC_NAIVE1.cpp  LB_MC_NAIVE2.cpp  PCA.cpp  TLB.cpp  cell.h  def.h  funcs.h  main.cpp  output.txt  transpose.cpp
0221/: CMakeLists.txt  LB_MC1.cpp  LB_MC2.cpp  LB_MC3E.cpp  LB_MC3_PLUS.cpp  TLB.cpp  def.h  funcs.h  lower_upper.cpp  output.txt
0224/: LB_MC3E.cpp  LB_MC3_PLUS.cpp  LB_MC_NAIVE2.cpp  PCA.cpp  TLB.cpp  def.h  divide_sigma_2.cpp  dtw.cpp  funcs.h  main.cpp  output.txt  split_two_dim.cpp
0227/: CMakeLists.txt  LB_Keogh.cpp  LB_MC1.cpp  LB_MC2.cpp  LB_MC3.cpp  LB_MC3E.cpp  LB_MC3_PLUS.cpp  LB_MC_NAIVE1.cpp  PCA.cpp  TLB.cpp  def.h  funcs.h  mu_sigma.cpp  output.txt
0227_MVandDTW_time/: LB_MC3E.cpp  TLB.cpp  cell.h  def.h  funcs.h  lower_upper.cpp  main.cpp  output.txt  read_data.cpp
0227_new/: LB_MC3E.cpp  LB_MC3_PLUS.cpp  TLB.cpp  def.h  funcs.h  main.cpp  mu_sigma.cpp  only_mu.cpp  output.txt
0312/: CMakeLists.txt  LB_MC3E.cpp  LB_MV.cpp  LB_PC.cpp  LB_TI.cpp  TLB.cpp  def.h  dist.cpp  divide_sigma_4_to_2.cpp  funcs.h  lower_upper.cpp  main.cpp  output.txt
0526-time of train set-ago/: LB_Keogh.cpp  LB_MC3.cpp  LB_MC3E.cpp  LB_MV.cpp  LB_PC.cpp  PCA.cpp  TLB.cpp  def.h  divide_sigma.cpp  funcs.h  output.txt
4-23-chao-change-ago/: CMakeLists.txt  LB_MC2.cpp  LB_MC3E.cpp  LB_MV.cpp  TLB.cpp  def.h  dtw.cpp  funcs.h  lower_upper.cpp  output.txt  read_data.cpp
NN-before/: LB_MC_NAIVE2.cpp  LB_MV.cpp  TLB.cpp  bucket.h  cell.h  dist.cpp  main.cpp  mu_sigma.cpp  output.txt  transpose.cpp
delete_mask_before/: LB_MC1.cpp  LB_MC3.cpp  LB_MC3E.cpp  LB_MV.cpp  LB_Petitjean.cpp  LDA.cpp  TLB.cpp  cell.h  data_size.txt  def.h  funcs.h  lower_upper.cpp  output.txt  split_two_dim.cpp
graph_before/: CMakeLists.txt  LB_MC3_PLUS.cpp  LB_MC_NAIVE1.cpp  LB_MV.cpp  LB_TI.cpp  TLB.cpp  def.h  funcs.h  mu_sigma.cpp  output.txt  read_data.cpp
